--- a/src/components/GridItem.css
+++ b/src/components/GridItem.css
@@ -4,6 +4,8 @@
   box-shadow: 0px 0px 0px 2px #a9a9a9;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  cursor: -webkit-grab;
+  cursor: grab; }
   .grid-item.over {
     background-color: rgba(0, 170, 237, 0.8); }
