--- a/src/components/GridItem.scss
+++ b/src/components/GridItem.scss
@@ -5,8 +5,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: -webkit-grab;
-  cursor: grab;
+
+  &.draggable {
+    cursor: -webkit-grab;
+    cursor: grab;
+  }
+
   &.over {
     background-color: rgba(0, 170, 237, 0.8);
   }
